Fix: fixing overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -11,4 +11,5 @@
     background-color: $primary-color;
     height: 100vh;
     color: $text-color;
+    overflow-x: hidden;
 }
