--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,41 +1,48 @@
-.homeContainer{
+.homeContainer {
     display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
 }
-.greetings{
+
+.greetings {
     width: 100%;
     padding: 0 0 0 100px;
 }
-.homeText{
+
+.homeText {
     margin: 40px 0;
 }
-.homeText p{
+
+.homeText p {
     margin: 20px 0;
     font-size: 25px;
     font-family: $body-font;
 }
-.homeText h1{
+
+.homeText h1 {
     font-size: 50px;
     font-family: $heading-font;
 }
-.homeBtn{
+
+.homeBtn {
     display: flex;
 }
-.techImg{
+
+.techImg {
     width: 100%;
     display: flex;
     justify-content: center;
 }
-.techImg img{
+
+.techImg img {
     width: 500px;
     height: 500px;
     object-fit: cover;
 }
 
-@media all and (max-width: 1024px) {
-    .homeContainer{
+@media all and (max-width: 768px) {
+    .homeContainer {
         display: flex;
         max-width: 1024px;
         width: 100%;
@@ -43,13 +50,22 @@
         justify-content: center;
         align-items: center;
     }
-    .greetings{
+
+    .greetings {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
         width: 100%;
-        padding: 0 0 0 100px;
-        // text-align: center;
+        padding: 0 40px;
     }
-    .techImg
-    {
+
+    .techImg {
         display: none;
+    }
+}
+
+@media all and (max-width: 500px) {
+    .homeBtn {
+        flex-wrap: wrap;
     }
 }
